# FLAM-Assignment

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgeviewer/: CameraProcessor.kt  GLView.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
gl/src/main/java/com/example/edgeviewer/gl/: SimpleRenderer.kt
jni/: CMakeLists.txt
jni/src/: edge_processor.cpp  edge_processor.h  native-lib.cpp
web/: package-lock.json  package.json  tsconfig.json
web/public/: index.html  style.css
web/src/: index.ts
